--- a/minishell/ToDo
+++ b/minishell/ToDo
@@ -21,13 +21,27 @@
     [ ] ctrl-\ non fa nulla
 [ ] Builtins:
     [ ] echo
-    [ ] echo -n
-    [ ] cd (solo con persorso relativo o assuloto)
-    [ ] pwd
+		[ ] echo testo Stampa il testo con \n
+		[ ] echo -n testo Stampa il testo senza il \n
+    [ ] cd Ti cambia di directori
+		[ ] cd ~ Ti porta all'inizio delle cartelle
+		[ ] cd  Ti porta all'inizio delle cartelle
+		[ ] cd .. Ti porta alla cartella precedente
+		[ ] cd cartella Ti porta alla cartella indicata
+    [ ] pwd Mostra in quale cartella ti trovi con il terminale
     [-] export
+		[X] export Stampa tutte le variabili d'ambiente
+		[X] export var Aggiunge la variabile d'ambiente senza valore
+		[-] export var=val Aggiunge/Imposta la variabile d'ambiente con valore
+		[-] export var+=val Aggiunge/Imposta la variabile d'ambiente con valore
     [-] unset
-    [X] env
+		[-] Rimuove una variabile d'ambiente
+    [X] env Mostra tutte le variabili d'ambiente con all'interno dei valori
     [X] exit
+		[X] Esce dalla shell
+		[X] Non esce dalla shell se in una pipe
+		[X] exit 42 Esce dal programma con quel codice di errore
+		[X] Controllare se sia passsato un numero
 
 Bonus:
 [X] Implementa: && esegue entrambi i comandi
