voglio mangiare il tuo pancreas

--- a/minishell/ToDo
+++ b/minishell/ToDo
@@ -20,22 +20,21 @@
     [ ] ctrl-D esce dalla shell
     [ ] ctrl-\ non fa nulla
 [ ] Builtins:
-    [ ] echo
-		[ ] echo testo Stampa il testo con \n
-		[ ] echo -n testo Stampa il testo senza il \n
+    [X] echo
+		[X] echo testo Stampa il testo con \n
+		[X] echo -n testo Stampa il testo senza il \n
     [ ] cd Ti cambia di directori
 		[ ] cd ~ Ti porta all'inizio delle cartelle
 		[ ] cd  Ti porta all'inizio delle cartelle
 		[ ] cd .. Ti porta alla cartella precedente
 		[ ] cd cartella Ti porta alla cartella indicata
-    [ ] pwd Mostra in quale cartella ti trovi con il terminale
+    [X] pwd Mostra in quale cartella ti trovi con il terminale
     [-] export
-		[X] export Stampa tutte le variabili d'ambiente
+		[-] export Stampa tutte le variabili d'ambiente, in ordine alfabetico
 		[X] export var Aggiunge la variabile d'ambiente senza valore
-		[-] export var=val Aggiunge/Imposta la variabile d'ambiente con valore
+		[X] export var=val Aggiunge/Imposta la variabile d'ambiente con valore
 		[-] export var+=val Aggiunge/Imposta la variabile d'ambiente con valore
-    [-] unset
-		[-] Rimuove una variabile d'ambiente
+    [X] unset Rimuove una variabile d'ambiente
     [X] env Mostra tutte le variabili d'ambiente con all'interno dei valori
     [X] exit
 		[X] Esce dalla shell
@@ -44,16 +43,16 @@
 		[X] Controllare se sia passsato un numero
 
 Bonus:
-[X] Implementa: && esegue entrambi i comandi
-[X] Implementa: || esegue il secondo comando solo se il precedente ha dato esito positivo
-[ ] Implementa: le ()
-[ ] Implementa: wildcard *
+	[X] Implementa: && esegue entrambi i comandi
+	[X] Implementa: || esegue il secondo comando solo se il precedente ha dato esito positivo
+	[ ] Implementa: le ()
+	[ ] Implementa: wildcard *
 
 Casi limite:
-[ ] echo 1 2 > hola outfile
-[ ] echo "'"$HOME"'"
-[ ] "echo"
-[ ] 'echo'
+	[ ] echo 1 2 > hola outfile
+	[ ] echo "'"$HOME"'"
+	[ ] "echo"
+	[ ] 'echo'
 Dare errore:
 	[ ] cmd &&& cmd
 	[ ] |, &&, ||, non chiusi
