--- a/minishell - Copia/ToDo
+++ b/minishell - Copia/ToDo
@@ -16,24 +16,23 @@
 [X] Stampa le variabili globali, esempio: $HOME
 [X] Stampa codice uscita dell'ultimmo comando: $?
 [ ] Gestire segnali, quando aspetta dei comandi:
-    [ ] ctrl-C cancella il contenuto della riga
-    [ ] ctrl-D esce dalla shell
-    [ ] ctrl-\ non fa nulla
+    [Y] ctrl-C cancella il contenuto della riga
+    [Y] ctrl-D esce dalla shell
+    [Y] ctrl-\ non fa nulla
 [ ] Builtins:
     [X] echo
 		[X] echo testo Stampa il testo con \n
 		[X] echo -n testo Stampa il testo senza il \n
-    [ ] cd Ti cambia di directori
-		[ ] cd ~ Ti porta all'inizio delle cartelle
-		[ ] cd  Ti porta all'inizio delle cartelle
-		[ ] cd .. Ti porta alla cartella precedente
-		[ ] cd cartella Ti porta alla cartella indicata
+    [Y] cd Ti cambia di directori del terminale
+		[Y] cd  Ti porta all'inizio delle cartelle
+		[Y] cd .. Ti porta alla cartella precedente
+		[Y] cd cartella Ti porta alla cartella indicata
     [X] pwd Mostra in quale cartella ti trovi con il terminale
     [-] export
-		[-] export Stampa tutte le variabili d'ambiente, in ordine alfabetico
+		[Y] export Stampa tutte le variabili d'ambiente, in ordine alfabetico
 		[X] export var Aggiunge la variabile d'ambiente senza valore
 		[X] export var=val Aggiunge/Imposta la variabile d'ambiente con valore
-		[-] export var+=val Aggiunge/Imposta la variabile d'ambiente con valore
+		[Y] export var+=val Aggiunge/Imposta la variabile d'ambiente con valore
     [X] unset Rimuove una variabile d'ambiente
     [X] env Mostra tutte le variabili d'ambiente con all'interno dei valori
     [X] exit
