--- a/minishell - Copia/ToDo
+++ b/minishell - Copia/ToDo
@@ -2,7 +2,7 @@
 [X] Cronologia dei comandi
 [X] Avviare comandi, esempio: ls
 [X] Avviare comandi, esempio: /bin/ls
-[-] Stampa le variabili globali, esempio: $HOME. Nota: una var dámbiente e composto da charatteri alphamunnetici e _, qiundi lui espande a prescindere
+[Y] Stampa le variabili globali, esempio: $HOME. Nota: una var d'ambiente e composto da charatteri alphamunnetici e _; Nota2: lui espande a prescindere sia che esiste, sia no
 [X] Stampa codice uscita dell'ultimmo comando: $?
 Gestire ' ":
     [X] ' prende il contenuto delle ' e lo usa cosi come
@@ -22,12 +22,12 @@ Gestire segnali, quando aspetta dei comandi:
 Builtins:
 	NOTA: SE SI CANCELLA PATH QUESTI DEVONO CONTINUARE A FUNZIONARE
     [X] env Mostra tutte le variabili d'ambiente con all'interno dei valori
-    [-] pwd Mostra in quale cartella ti trovi con il terminale
+    [Y] pwd Mostra in quale cartella ti trovi con il terminale
     [Y] unset Rimuove una variabile d'ambiente
     echo
 		[X] echo testo Stampa il testo con \n
-		[-] echo "  testo  " Stampa il testo con \n
-		[-] echo '  testo  ' Stampa il testo con \n
+		[Y] echo "  testo  " Stampa il testo con \n
+		[Y] echo '  testo  ' Stampa il testo con \n
 		[X] echo -n testo Stampa il testo senza il \n
     cd Ti cambia di directori del terminale
 		[-] cd  Ti porta all'inizio delle cartelle
@@ -52,14 +52,16 @@ Bonus:
 	[X] Implementa: && esegue entrambi i comandi
 	[X] Implementa: || esegue il secondo comando solo se il precedente ha dato esito positivo
 	[ ] Implementa: le ()
-	[ ] Implementa: wildcard *
+	[Y] Implementa: wildcard *
 
 Casi limite:
 	[ ] echo 1 2 > hola outfile
 	[ ] echo "'"$HOME"'"
-	[ ] "echo"
-	[ ] 'echo'
+	[ ] "ls" esegue il comando
+	[ ] 'ls' esegue il comando
 Dare errore:
+	[ ] 'ls -la' non riconosce il comando
+	[ ] "ls -la" non riconosce il comando
 	[ ] cmd &&& cmd
 	[ ] |, &&, ||, non chiusi
 	[ ] cmd && && cmd
