--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-# INDICE
-## - [C-Piscine](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_c-piscine)
-## - [Common Core](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_common%20core)
+## C-Piscine
+- [C-Piscine](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_c-piscine)
 
-## - [Tester && Materiali progetti: Common Core](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_common%20core/Aa_materiali)
+## Common Core
+- [Common Core](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_common%20core)
+- [Tester & Materiali progetti](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_common%20core/Aa_materiali)
 
 # Contattami
-## [Andrei Anghi[Anghi colui che regna]](https://andreianghi.ddns.net) - [Link tree](https://socialandreianghi.ddns.net)
+## [Andrei Anghi (Anghi colui che regna)](https://andreianghi.ddns.net) - [Link tree](https://socialandreianghi.ddns.net)
