--- a/README
+++ b/README
@@ -6,4 +6,5 @@
 - [Tester & Materiali progetti](https://github.com/AnghiAndrei/42RomaLuis/tree/main/_common%20core/Aa_materiali)
 
 # Contattami
-## [Andrei Anghi (Anghi colui che regna)](https://andreianghi.ddns.net) -> [Link tree](https://socialandreianghi.ddns.net)
+## - [Portfolio](https://andreianghi.ddns.net)
+## - [Link tree](https://socialandreianghi.ddns.net)
