--- a/webserv/ToDo
+++ b/webserv/ToDo
@@ -8,11 +8,13 @@ Mandatori:
         [ ] Eseguire codice Php o Python tramite CGI
     File di configurazione:
         *Parametro obbligatorio nella configurazione
-        [ ] *Numero di porta
-        [ ] *Indirizzo ip
-        [ ] Nome del server
-        [ ] Configurare Pagine di errore [se non ci sono, prendi quelle predefinite]
-        [ ] Limitatura del client body size
+        [X] *Numero di porta
+        [X] *Indirizzo ip
+        [X] *Client body size
+        [X] Nome del server
+        [X] Configurare Pagine di errore [se non ci sono, prendi quelle predefinite]
+			{X} 418
+			{X} 404
 		* ! Nota: non puoi usare regexp ! *
 		[ ] Definire un elenco di metodi HTTP accettati
 		[ ] Definire un riindirizzamento
