--- a/webserv/ToDo
+++ b/webserv/ToDo
@@ -18,9 +18,9 @@ Mandatori:
 		* ! Nota: non puoi usare regexp ! *
 		[ ] Definire un elenco di metodi HTTP accettati
 		[ ] Definire un riindirizzamento
-		[ ] Definire una directory o un file da cui il file deve essere cercato (URL /kapouet/pouic/toto/pouet è /tmp/www/pouic/toto/pouet)
+		[ ] ? Definire una directory o un file da cui il file deve essere cercato (URL /kapouet/pouic/toto/pouet è /tmp/www/pouic/toto/pouet)
 		[ ] Attivare o disattivare l'elenco delle directory
-		[ ] Impostare un file predefinito per rispondere se la richiesta è una directory
+		[ ] Definire un index
 
 Bonus:
 	[ ] Gestire piu CGI
