--- a/webserv/ToDo
+++ b/webserv/ToDo
@@ -18,7 +18,7 @@ Mandatori:
 		* ! Nota: non puoi usare regexp ! *
 		[X] *Definire un elenco di metodi HTTP accettati
 		[X] Definire un riindirizzamento
-		[ ] Definire una directory da dove scarica e carica file dal sito
+		[X] Definire una directory da dove scarica e carica file dal sito
 		[X] Attivare o disattivare l'elenco delle directory
 		[X] Definire un index
 
