--- a/webserv/..cose/ToDo
+++ b/webserv/..cose/ToDo
@@ -1,8 +1,7 @@
 Mandatori:
     Funzionamento:
-		[ ] Se non specificato la porta, la richiesta verra servita dal primo server
         [X] Hostare un sito web statico
-        [ ] Gli utenti possono caricare immagini
+        [X] Gli utenti possono caricare immagini
         [ ] Implementare metodi:
             [X] GET
             [X] POST
