--- a/webserv/..cose/ToDo
+++ b/webserv/..cose/ToDo
@@ -20,20 +20,28 @@ Mandatori:
         *Parametro obbligatorio nella configurazione
         [X] *Numero di porta
         [X] *Indirizzo ip
-        [X] *Client body size
         [X] Nome del server
+        [X] *Client body size
         [X] Configurare Pagine di errore [se non ci sono, prendi quelle predefinite]
 			{X} 418
 			{X} 413
 			{X} 404
 			{X} 405
-		* ! Nota: non puoi usare regexp ! *
-		[X] *Definire un elenco di metodi HTTP accettati
+		[X] Definire un elenco di metodi HTTP accettati
 		[X] Definire un riindirizzamento
-		[X] Definire una directory da dove scarica e carica file dal sito
+		[X] Definire la path da coi prendere il sito
 		[X] Attivare o disattivare l'elenco delle directory
 		[X] Definire un index
-		[ ] Definire le cgi utilizzabili
+		[X] Definire le cgi utilizzabili
+		
+		/* ! Questi devono essere delle impostazioni per delle cartelle specifiche ! */
+		[X] Definire un elenco di metodi HTTP accettati
+		[X] Definire un riindirizzamento
+		[X] Definire la path da coi prendere il sito
+		[X] Attivare o disattivare l'elenco delle directory
+		[X] Definire un index
+		[X] Definire le cgi utilizzabili
+        [X] Client body size
 
 Bonus:
 	[X] Gestire piu CGI
